[project]
name = "parquet-lens"
version = "0.1.0"
description = "App to view the contents of Parquet files and generate insights using LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "streamlit>=1.55.0",
]
